# kann

./: .gitignore  CMakeLists.txt  README.md
cmake/: rnn-bit-in.txt
examples/: README.md  ae.c  inspect.c  mlp.c  mnist-cnn.c  rnn-bit.c  textgen.c  vae.c
kann_extra/: kann_data.c
libs/getopt/: getopt.h
